Fixed Scroll on top Button Mobile // Website Name // Mobile Menu Button

--- a/src/app/aboutme/aboutme.component.sass
+++ b/src/app/aboutme/aboutme.component.sass
@@ -81,6 +81,8 @@
         padding: 0 50px !important
     .ellipse-small
         right: 30px !important
+    .ellipse-medium
+        display: none
 
 @media ( max-width: 480px )
     .aboutme-heading
