--- a/src/app/head/head.component.sass
+++ b/src/app/head/head.component.sass
@@ -85,9 +85,6 @@
     100%
         transform: scaleY(1)
 
-
-
-
 .content
     max-width: $max-w
     width: 100%
@@ -280,6 +277,13 @@
             margin-right: 50px !important
 
 @media  ( max-width: 600px )
+    .navigation
+        img
+            height: 45px !important
+    .mobile-nav
+        img
+            height: 40px !important
+            width: auto !important
     .content
         img
             bottom: 0 !important
